--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -8,6 +8,7 @@
   background: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
+  background-color: #2d3d4e;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/bg-back-mobile@2x.jpg");
