--- a/source/less/style.less
+++ b/source/less/style.less
@@ -4,8 +4,10 @@
 @import "blocks/app-save.less";
 @import "blocks/contacts.less";
 @import "blocks/copyright.less";
+@import "blocks/history.less";
 @import "blocks/main-nav.less";
 @import "blocks/map.less";
+@import "blocks/modal.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-form.less";
 @import "blocks/page-photo.less";
