--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,31 +1,34 @@
-@media (min-width: @tablet-width) {
-  .copyright {
-    width: 150px;
-    display: flex;
-    justify-content: flex-end;
+.copyright {
+  width: 130px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.copyright__text {
+  line-height: 18px;
+  font-weight: 400;
+  margin-top: 6px;
+  margin-right: 16px;
+}
+
+.copyright__link {
+  fill: #d22856;
+
+  &:hover {
+    fill: rgba(40, 54, 69, 1);
   }
 
-  .copyright__text {
-    line-height: 18px;
-    font-weight: 400;
-    margin-top: 6px;
-    margin-right: 16px;
-  }
-
-  .copyright__link {
-    fill: #d22856;
-
-    &:hover {
-      fill: rgba(40, 54, 69, 1);
-    }
-
-    &:active {
-      fill: rgba(40, 54, 69, 0.3);
-    }
+  &:active {
+    fill: rgba(40, 54, 69, 0.3);
   }
 }
 
 @media (min-width: @desktop-width) {
+  .copyright {
+    width: 150px;
+    justify-content: flex-end;
+  }
+
   .copyright__text {
     font-size: 18px;
   }
