--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,27 +1,12 @@
 .map {
-  position: relative;
   width: 100%;
-  height: 200px;
-  padding-bottom: 20px;
-  background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/bg-map-mobile@1x.png");
+  height: 220px;
+  margin-bottom: 20px;
+  background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/map-mobile.jpg");
   background-repeat: no-repeat, no-repeat;
-  background-position: center -6px, center -425px;
+  background-position: center -13px,center -430px;
   background-color: #f2f2f2;
-
-  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/bg-map-mobile@2x.jpg");
-    background-size: auto auto, 320px auto;
-  }
-
-  &::after {
-    position: absolute;
-    content: "";
-    width: 36px;
-    height: 36px;
-    background: url(../img/icon-map-marker.svg);
-    top: 114px;
-    left: 142px;
-  }
+  border: 0;
 }
 
 .map__wrapper {
@@ -32,20 +17,10 @@
 
 @media (min-width: @tablet-width) {
   .map {
-    height: 363px;
-    background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/bg-map-tablet@1x.jpg");
+    height: 383px;
+    background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/map-tablet.jpg");
     background-position: center 0, center -340px;
-    background-size: 755px 75px,700px auto;
-
-  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/bg-map-tablet@2x.jpg");
-    background-size: 755px 75px,700px auto;
-    }
-
-    &::after {
-      top: 202px;
-      left: 312px; 
-    }
+    background-size: 755px 75px,658px auto;
   }
 
   .map__wrapper {
@@ -55,20 +30,11 @@
 
 @media (min-width:@desktop-width) {
   .map {
-    height: 482px;
-    background-image: url(../img/bg-triangle-white-footer.svg),url(../img/bg-map-desktop@2x.jpg);
+    height: 507px;
+    background-image: url(../img/bg-triangle-white-footer.svg),url("../img/map-desktop.jpg");
     background-position: center 0, center -277px;
-    background-size: 1200px 100px,1200px auto;
-
-    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-      background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/bg-map-desktop@2x.jpg");
-      background-size: 1200px 100px,1200px auto;
-      }
-
-    &::after {
-      top: 264px;
-      left: 582px;
-    }
+    background-size: 1200px 100px,1194px auto;
+    margin-bottom: 16px;
   }
 
   .map__wrapper {
