--- a/source/less/blocks/photo-call.less
+++ b/source/less/blocks/photo-call.less
@@ -18,3 +18,25 @@
   margin-top: 44px;
   margin-bottom: 41px;
 }
+
+@media (min-width:@tablet-width) {
+  .photo-call__wrapper {
+    max-width: 620px;
+  }
+
+  .photo-call__description {
+    font-size: 18px;
+    margin-bottom: 69px;
+  }
+}
+
+@media (min-width:@desktop-width) {
+  .photo-call__wrapper {
+    max-width: 940px;
+  }
+
+  .photo-call__description {
+    margin-top: 9px;
+    margin-bottom: 66px;
+  }
+}
