--- a/source/less/blocks/photo-editor.less
+++ b/source/less/blocks/photo-editor.less
@@ -27,9 +27,9 @@
   border: 0;
 }
 
-photo-editor__instrument-active {
+.photo-editor__instrument-active {
   fill: #d22856;
-} 
+}
 
 .photo-editor__crop {
   padding-left: 32px;
@@ -138,7 +138,7 @@ photo-editor__instrument-active {
   }
 }
 
-@media (min-width:@tablet-width) {
+@media (min-width: @tablet-width) {
   .photo-editor {
     padding-bottom: 25px;
     margin-bottom: 17px;
@@ -245,7 +245,7 @@ photo-editor__instrument-active {
   }
 }
 
-@media (min-width:@desktop-width) {
+@media (min-width: @desktop-width) {
   .photo-editor {
     background-color: #ffffff;
   }
