--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -4,7 +4,7 @@
   margin-bottom: 20px;
   background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/map-mobile.jpg");
   background-repeat: no-repeat, no-repeat;
-  background-position: center -13px,center -430px;
+  background-position: center -13px, center -430px;
   background-color: #f2f2f2;
   border: 0;
 }
@@ -20,7 +20,7 @@
     height: 383px;
     background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/map-tablet.jpg");
     background-position: center 0, center -340px;
-    background-size: 755px 75px,658px auto;
+    background-size: 755px 75px, 658px auto;
   }
 
   .map__wrapper {
@@ -28,12 +28,12 @@
   }
 }
 
-@media (min-width:@desktop-width) {
+@media (min-width: @desktop-width) {
   .map {
     height: 507px;
-    background-image: url(../img/bg-triangle-white-footer.svg),url("../img/map-desktop.jpg");
+    background-image: url("../img/bg-triangle-white-footer.svg"), url("../img/map-desktop.jpg");
     background-position: center 0, center -277px;
-    background-size: 1200px 100px,1194px auto;
+    background-size: 1200px 100px, 1194px auto;
     margin-bottom: 16px;
   }
 
