--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -1,5 +1,5 @@
 .modal {
-  box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+  box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
   border-radius: 6px;
   width: 320px;
   margin-left: auto;
@@ -91,7 +91,7 @@
   display: none;
 }
 
-@media (min-width:@tablet-width) {
+@media (min-width: @tablet-width) {
   .modal {
     width: 463px;
   }
@@ -141,7 +141,7 @@
   }
 }
 
-@media (min-width:@desktop-width) {
+@media (min-width: @desktop-width) {
   .modal {
     width: 780px;
   }
