--- a/source/less/blocks/tariff.less
+++ b/source/less/blocks/tariff.less
@@ -37,7 +37,7 @@
     left: 0;
     width: 74px;
     height: 73px;
-    background-image: url(../img/bg-hit.svg);
+    background-image: url("../img/bg-hit.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
   }
@@ -116,7 +116,7 @@
   margin-left: 19px;
 }
 
-.tariff__control-mobile label{
+.tariff__control-mobile label {
   display: inline-block;
   width: 6px;
   height: 6px;
@@ -168,8 +168,9 @@
 
   .tariff__hit {
     &::before {
-      background-position: 0px -14px;
+      background-position: 0 -14px;
     }
+
     &::after {
       top: 8px;
     }
@@ -205,7 +206,7 @@
 
 @media (min-width: @desktop-width) {
   .tariff {
-    background-position: center 0px;
+    background-position: center 0;
     padding-top: 160px;
     padding-bottom: 90px;
   }
