--- a/source/less/blocks/modal.less
+++ b/source/less/blocks/modal.less
@@ -4,6 +4,11 @@
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #ffffff;
 }
 
 .modal__save {
@@ -12,6 +17,7 @@
 
 .modal__error {
   display: none;
+  padding-bottom: 25px;
 }
 
 .modal__wrapper {
@@ -168,7 +174,7 @@
   }
 
   .modal__error {
-    padding-bottom: error;
+    padding-bottom: 0;
   }
 
   .modal__error-wrapper {
