order для страницы с формой

--- a/source/less/blocks/history.less
+++ b/source/less/blocks/history.less
@@ -37,6 +37,7 @@
   width: 280px;
   margin-left: auto;
   margin-right: auto;
+  order: -3;
 }
 
 .history__block-first {
@@ -78,6 +79,7 @@
   width: 100%;
   background-color: #f2f2f2;
   padding-bottom: 40px;
+  order: -2;
 }
 
 .history__block-progress {
@@ -160,6 +162,7 @@
   width: 100%;
   background-color: #ffffff;
   margin-top: 25px;
+  order: -1;
 }
 
 .history__block-contacts {
