--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -26,7 +26,8 @@
   padding-top: 48px;
   background: url("../img/bg-triangle-white.svg");
   background-repeat: no-repeat;
-  background-position: center -36px;
+  background-position: 0 0;
+  background-size: 100%;
   background-color: #f2f2f2;
 }
 
@@ -113,10 +114,6 @@
     margin: 0 auto;
   }
 
-  .advantages__main-mobile {
-    background-position: center -24px;
-  }
-
   .advantages__img-align {
     width: 310px;
     height: 481px;
@@ -159,7 +156,8 @@
     padding-top: 0;
     background: url("../img/bg-triangle-white.svg");
     background-repeat: no-repeat;
-    background-position: left 0;
+    background-position: 0 0;
+    background-size: 100%;
     background-color: #f2f2f2;
   }
 
