после первой правки

--- a/source/less/blocks/history.less
+++ b/source/less/blocks/history.less
@@ -287,6 +287,14 @@
   padding-left: 18px;
   padding-top: 14px;
   margin-top: -30px;
+
+  &:hover {
+    border: 2px solid #000000;
+  }
+
+  &:active {
+    border: 2px solid #d22856;
+  }
 }
 
 .history__block-button {
@@ -313,6 +321,7 @@
   color: #ffffff;
   text-transform: uppercase;
   background-color: #2aab6d;
+  border: 0;
 
   &:hover {
     background-color: #1c9b5e;
