--- a/source/less/blocks/photo-editor.less
+++ b/source/less/blocks/photo-editor.less
@@ -52,7 +52,7 @@
   }
 }
 
-.photo-editor__instrument-active {
+.photo-editor__instrument-active-crop {
   fill: #d22856;
 }
 
@@ -199,6 +199,10 @@
     width: 17px;
     margin-left: 6px;
     margin-top: -3px;
+  }
+
+  .photo-editor__instrument-active {
+    fill: #d22856;
   }
 
   .photo-editor__range-controls {
