--- a/source/less/blocks/tariff.less
+++ b/source/less/blocks/tariff.less
@@ -4,15 +4,16 @@
   padding-bottom: 40px;
   background: url("../img/bg-triangle-white.svg");
   background-repeat: no-repeat;
-  background-position: center -36px;
+  background-position: center 0;
   background-color: #f2f2f2;
   margin-bottom: 43px;
+  background-size: 100%;
 }
 
 .tariff__wrapper {
   padding-left: 20px;
   padding-right: 20px;
-  max-width: 280px;
+  width: 280px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -140,13 +141,12 @@
 
 @media (min-width: @tablet-width) {
   .tariff {
-    background-position: left -38px;
     padding-top: 91px;
     padding-bottom: 61px;
   }
 
   .tariff__wrapper {
-    max-width: 620px;
+    width: 620px;
   }
 
   .tariff__pink-mobile {
@@ -206,13 +206,12 @@
 
 @media (min-width: @desktop-width) {
   .tariff {
-    background-position: center 0;
     padding-top: 160px;
     padding-bottom: 90px;
   }
 
   .tariff__wrapper {
-    max-width: 1200px;
+    width: 1200px;
     padding-left: 130px;
     padding-right: 130px;
   }
