--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -30,3 +30,21 @@
     border: 3px solid rgba(40, 54, 69, 0.1);
   }
 }
+
+.social__icon-twitter {
+  position: relative;
+  top: 3px;
+  left: 1px;
+}
+
+.social__icon-facebook {
+  position: relative;
+  top: 3px;
+  left: 0;
+}
+
+.social__icon-youtube {
+  position: relative;
+  top: 3px;
+  left: 3px;
+}
