--- a/source/less/scaffolding.less
+++ b/source/less/scaffolding.less
@@ -35,7 +35,7 @@ body {
   min-width: 320px;
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 24px;
   font-weight: 400;
