--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -96,7 +96,6 @@
   height: 66px;
   align-items: center;
   justify-content: space-between;
-  // border-bottom: 1px solid #000000;
 }
 
 .main-nav--nojs .main-nav__toggle {
@@ -124,6 +123,27 @@
   background-color: #283645;
 }
 
+.main-nav__logo-mobile {
+  fill: #ffffff;
+
+  &:hover {
+    fill: #d22856;
+  }
+
+  &:active {
+    fill: #ffffff;
+    opacity: 0.3;
+  }
+}
+
+.main-nav__logo-tablet {
+  display: none;
+}
+
+.main-nav__logo-desktop {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .main-nav {
     width: 100%;
@@ -135,6 +155,28 @@
 
   .main-nav__logo {
     width: 146px;
+  }
+
+  .main-nav__logo-tablet {
+    display: block;
+    fill: #ffffff;
+
+    &:hover {
+      fill: #d22856;
+    }
+
+    &:active {
+      fill: #ffffff;
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__logo-mobile {
+    display: none;
+  }
+
+  .main-nav__logo-desktop {
+    display: none;
   }
 }
 
@@ -163,6 +205,28 @@
   .main-nav__logo {
     margin-left: -19px;
     margin-top: -5px;
+  }
+
+  .main-nav__logo-desktop {
+    display: block;
+    fill: #ffffff;
+
+    &:hover {
+      fill: #d22856;
+    }
+
+    &:active {
+      fill: #ffffff;
+      opacity: 0.3;
+    }
+  }
+
+  .main-nav__logo-mobile {
+    display: none;
+  }
+
+  .main-nav__logo-tablet {
+    display: none;
   }
 
   .main-nav__wrapper-desktop {
